# Genie_Widgets

./: .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  AGENT_CONFIG.md  ARCHITEKTUR.md  CLAUDE.md  CONTRIBUTING.md  MASTER_ROADMAP_CHECKLIST.md  PROJECT_AUDIT_REPORT.md  PROJECT_LANDKARTE.md  PROJECT_STRUCTURE_VERIFICATION.md  QUICK_REFERENCE.md  README.md  layout.xml  mypy.ini  plan-genieWidgetsAudit.prompt.md  pyproject.toml  pyrightconfig.json  requirements.txt
.claude/: settings.local.json
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  copilot-instructions.md
.github/instructions/: factories.instructions.md  json-config.instructions.md  testing.instructions.md  ui-components.instructions.md
archive/: layouts.json
archive/backups/2026-03-27/: demo_action_registry.py.bak
archive/profiles-old/: light_transparent.json  ocean_breeze.json
archive/themes-old/: dark.qss  transparent.qss
config/: actions.json  dnd.json  i18n.de.json  i18n.en.json  layout_config.json  layouts.json  lists.json  lists.json.backup  menus.json  panels.json  panels_test.json  profiles_backup_README.txt  responsive.json  tabs.json  tabs_test.json  theme_colors_dark.json  theme_tokens.json  themes.json  themes.json.backup  toolbar.json  ui_config.json
config/profiles/: dark.json  dark_transparent.json  dark_transparent_FULL.json  light.json  light_transparent.json  midnight_blue.json  ocean_breeze.json  solid_dark.json  transparent.json
data/: layout.xml  layout_alt.xml  themes.json
docs/: ACTIONBAR_ARCHITECTURE.md  AGENT_DISCOVERY.md  ANALYSE_REPORT.md  ANALYSE_SUMMARY.md  API_REFERENCE.md  ARCHITECTURE.md  COMPLETE_GUIDE.md  CONFIGURATION_GUIDE.md  CONTROLLER_ARCHITECTURE.md  CORNER_HANDLES_INTEGRATION.md  CORNER_SPLITTER_HANDLES.md  DEMO.md  EXTENDED_FEATURES.md  FACTORY_SYSTEM.md  GITHUB_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INLAY_TITLEBAR.md  INLAY_TITLEBAR_IMPLEMENTATION.md  PHASE_1_MANUAL_TEST.md  PHASE_1_TAB_SELECTOR.md  PHASE_2_FLOAT_BUTTON.md  PLUGIN_DEVELOPMENT.md  PROFILE_ANLEITUNG.md  PROFILE_COLORS_REFERENCE.md  QUICK_START.md  README.md  SETUP.md  SIGNALS_EVENTS.md  TAB_SYSTEM.md  THEMES_UPDATE.md  THEME_COLOR_PLAN.md  THEME_IMPLEMENTATION_COMPLETE.md  THEME_SYSTEM.md  THEME_SYSTEM_GUIDE.md  THEME_TRANSPARENCY_COMPARISON.md  TOOLBAR_CUSTOM_ACTION_IMPLEMENTATION_GUIDELINES.md  TOOLBAR_STRUCTURE.md  UI_COMPONENTS.md  (+4 more)
docs/tracking/: action-registry-hardening-2026-03-27.md  git-status-2026-03-27.txt
examples/: colorpicker.css  complete_demo.py  demo_action_registry.py  demo_chevron_menu.py  demo_inlay_titlebar.py  phase_5_demo.py
schemas/: custom_actions.schema.json  dnd.schema.json  i18n.schema.json  layouts.schema.json  lists.schema.json  menus.schema.json  panels.schema.json  responsive.schema.json  tabs.schema.json  themes.schema.json  ui_config.schema.json
scripts/: README.md  __init__.py  analyze_project.py  autofix.py  build_theme.py  check_qss_validity.py  check_quality.py  generate_qss.py  git-new-feature.sh  git-sync-develop.sh  run_main.py  run_tests_summary.py  test_themes.py  verify_build.py
src/widgetsystem/: PySide6QtAds.pyi  __init__.py  enums.py
src/widgetsystem/controllers/: __init__.py  dnd_controller.py  dock_controller.py  layout_controller.py  responsive_controller.py  shortcut_controller.py  tab_command_controller.py  tab_navigation_controller.py  tab_subsystem.py  theme_controller.py  unified_tab_manager.py
src/widgetsystem/core/: __init__.py  action_registry.py  action_registry_window.py  command_registry.py  config_io.py  config_validator.py  gradient_system.py  main.py  main_1.py  main_visual.py  plugin_system.py  tab_commands.py  tab_hierarchy.py  template_system.py  theme_manager.py  theme_profile.py  undo_redo.py
src/widgetsystem/debug/: __init__.py  debug_extended.py  debug_redocking.py  debug_tab_selector.py
src/widgetsystem/factories/: __init__.py  action_factory.py  adaptive_splitter_controller.py  component_registry.py  dnd_factory.py  i18n_factory.py  layout_factory.py  list_factory.py  menu_factory.py  panel_configurable.py  panel_factory.py  qss_factory.py  responsive_factory.py  splitter_factory.py  tabs_factory.py  theme_factory.py  toolbar_factory.py  ui_config_factory.py  ui_dimensions_factory.py
src/widgetsystem/ui/: __init__.py  argb_color_picker.py  chevron_menu.py  config_panel.py  dock_slide_out_controller.py  enhanced_tab_widget.py  floating_state_tracker.py  floating_titlebar.py  inlay_titlebar.py  inlay_titlebar_old.py  plugin_manager_dialog.py  tab_color_controller.py  tab_drop_indicator.py  tab_selector_event_handler.py  tab_selector_monitor.py  tab_selector_visibility_controller.py  theme_editor.py  title_bar_button_collapser.py  (+5 more)
tests/: __init__.py  check_corrected.py  check_titlebar_visibility.py  check_which_signal.py  conftest.py  screenshot_titlebar.py  test_action_factory.py  test_adaptive_splitter.py  test_area_methods.py  test_argb_color_picker.py  test_button_visibility.py  test_chevron_menu.py  test_chevron_menu_i18n.py  test_chevron_menu_i18n_runtime.py  test_config_panel.py  test_config_panel_i18n_combos.py  test_config_panel_i18n_dialogs.py  test_config_panel_i18n_runtime.py  test_config_validator.py  test_corrected.py  test_count_behavior.py  test_detection_methods.py  test_dnd_factory.py  test_enums.py  test_features.py  test_floating_titlebar_extended.py  test_floating_titlebar_i18n.py  test_full_system.py  test_gradient_system.py  test_gradient_system_extended.py  test_i18n_factory.py  test_i18n_factory_extended.py  test_inlay_titlebar.py  test_inlay_titlebar_i18n.py  test_layout_factory.py  test_layout_factory_extended.py  test_layout_factory_i18n.py  test_list_factory.py  test_list_factory_extended.py  test_list_factory_i18n.py  (+51 more)
tests/debug/: debug_extended.py  debug_tab_selector.py
themes/: _auto_subtabwidget.qss  dark.qss  dark_blue_ads_theme.qss  dark_transparent.qss  light.qss  light_transparent.qss  midnight_blue.qss  ocean_blue.qss  ocean_breeze.qss  solid_dark.qss  transparent.qss
