[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
widgetsystem = ["py.typed", "*.pyi"]

[project]
name = "widgetsystem"
version = "0.1.0"
description = "Modular, configuration-driven GUI application with PySide6 and Advanced Docking System"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
    "PySide6-QtAds>=4.0.0",
]
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "WidgetSystem Team"}
]

[project.optional-dependencies]
dev = [
    # Type checking
    "mypy>=1.8.0",
    # Linting and formatting
    "ruff>=0.2.0",
    "pylint>=3.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",  # Parallel test execution
    "pytest-timeout>=2.2.0",  # Test timeouts
    # Security
    "bandit[toml]>=1.7.6",
    # Pre-commit hooks
    "pre-commit>=3.6.0",
    # Code upgrades
    "pyupgrade>=3.15.0",
    # Documentation
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
]

[tool.mypy]
# MyPy ultra-strict configuration - 2026 standards
python_version = "3.13"

# Strict mode - all checks enabled
strict = true

# Additional strict checks
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Type checking - Maximum strictness
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

# None/Optional handling
no_implicit_optional = true
strict_optional = true

# Advanced Any checks (relaxed for Qt compatibility)
disallow_any_unimported = true
disallow_any_expr = false  # Too strict for Qt signals/slots
disallow_any_decorated = false  # Qt decorators
disallow_any_explicit = false  # Explicit Any is sometimes needed

# Advanced strictness
local_partial_types = true
strict_equality = true
strict_concatenate = true
extra_checks = true
check_untyped_defs = true

# Error messages
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
color_output = true
error_summary = true

# Enable additional error codes (PEP 688+)
enable_error_code = [
    "explicit-override",
    "mutable-override",
    "redundant-self",
    "truthy-iterable",
    "ignore-without-code",
    "unused-awaitable",
    "redundant-expr",
]

# Imports
ignore_missing_imports = false
follow_imports = "normal"
follow_imports_for_stubs = true
namespace_packages = true
explicit_package_bases = true

# Cache
incremental = true
cache_dir = ".mypy_cache"

# Per-file options
[[tool.mypy.overrides]]
module = [
    "PySide6.*",
    "PySide6QtAds.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
# Tests can be slightly less strict
disallow_untyped_defs = false
disallow_untyped_decorators = false

[tool.ruff]
# Ruff configuration - ultra-strict mode (2026 standards)
line-length = 100
target-version = "py313"  # Latest Python version
extend-exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
]
src = ["src"]

# Output configuration
output-format = "concise"  # or "full" for detailed output
show-fixes = true

# Preview features - enable latest Ruff features
preview = false  # Set to true for bleeding-edge features

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "ALL",  # Enable all rules by default
]

ignore = [
    # Line length - handled by formatter
    "E501",   # Line too long
    
    # Documentation - we use Google style
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
    "D103",   # Missing docstring in public function (many in existing code)
    
    # Type annotations - handled by mypy
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "ANN401", # Dynamically typed Any
    
    # Specific patterns we use
    "B008",   # Function calls in argument defaults (common in Qt)
    "FBT001", # Boolean positional arg
    "FBT002", # Boolean default arg
    "FBT003", # Boolean positional value
    
    # Allow print in examples and tests
    "T201",   # print() found (allow in examples/)
    
    # Complexity - set higher limits
    "PLR0913", # Too many arguments (we need this for Qt)
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    
    # Allow TODO comments
    "FIX002",  # Line contains TODO
    "TD002",   # Missing author in TODO
    "TD003",   # Missing issue link in TODO
    
    # Magic values are okay in configs
    "PLR2004", # Magic value comparison
    
    # Implicit namespace packages (we use PEP 420)
    "INP001",  # Implicit namespace package
    
    # Exception handling (existing code has many blind catches, try-except-pass)
    "BLE001",  # Do not catch blind Exception
    "S110",    # try-except-pass detected
    "TRY003",  # Avoid specifying long messages outside exception class
    "TRY004",  # Prefer TypeError for type validation
    "EM101",   # Exception must not use string literal
    "EM102",   # Exception must not use f-string
    
    # Imports (we use runtime imports for lazy loading)
    "PLC0415", # Import outside toplevel
    
    # Naming (Qt conventions differ from PEP8)
    "N801",    # Class name should use CapWords
    "N802",    # Function name should be lowercase
    "N815",    # Variable in class scope should not be mixedCase
    "N999",    # Invalid module name (PySide6QtAds)
    
    # Code quality (existing code tech debt)
    "ERA001",  # Found commented-out code
    "RUF001",  # String contains ambiguous unicode
    
    # Function arguments
    "ARG002",  # Unused method argument
    "ARG005",  # Unused lambda argument
    
    # Pathlib (existing code uses open())
    "PTH123",  # open() should be replaced by Path.open()
    
    # Simplification/refactoring suggestions (nice-to-have, not critical)
    "SIM108",  # Use ternary operator
    "TRY300",  # Consider moving statement to else block
    "COM812",  # Trailing comma missing (formatter conflict)
    "PERF401", # Manual list comprehension (perf suggestion)
    "PLW0108", # Unnecessary lambda (style)
    "PT006",   # pytest wrong function argument name
    "PT011",   # pytest mock wrong return_value
    "RUF012",  # Mutable default in class
    "SIM117",  # Combine multiple with statements
    "SLF001",  # Private member access
    "UP042",   # ExceptionGroup syntax
    
    # Final edge cases
    "W291",    # Trailing whitespace (multiline strings with qlineargradient)
    "W293",    # Blank line contains whitespace
    "A001",    # Variable shadowing builtin (e.g., breakpoint)
    "S112",    # try-except-continue
    "B017",    # assert blind exception
    "F841",    # Local variable assigned but never used
]

# Allow autofix for all enabled rules (when run with --fix)
fixable = ["ALL"]
unfixable = []

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Use of assert (required in tests)
    "PLR2004", # Magic values in tests
    "ANN",     # Type annotations in tests
    "D",       # Docstrings in tests
]
"examples/**/*.py" = [
    "T201",    # print() in examples is fine
    "D",       # Less strict docs in examples
]

[tool.ruff.lint.isort]
# Import sorting configuration
force-single-line = false
force-sort-within-sections = true
lines-after-imports = 2
known-first-party = ["widgetsystem"]
known-third-party = ["PySide6", "PySide6QtAds"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings
convention = "google"

[tool.ruff.lint.pylint]
# Pylint-style checks
max-args = 8
max-branches = 15
max-returns = 8
max-statements = 60

[tool.ruff.lint.mccabe]
# Cyclomatic complexity
max-complexity = 15

[tool.ruff.lint.flake8-tidy-imports]
# Import rules
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
# Type checking imports
strict = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.flake8-quotes]
# Quote consistency
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.flake8-annotations]
# Annotation rules - strict type annotations
allow-star-arg-any = false
mypy-init-return = true
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.lint.flake8-builtins]
# Prevent shadowing builtins
builtins-allowed-modules = ["typing"]  # Allow typing.Optional etc.

[tool.ruff.lint.flake8-comprehensions]
# Modern comprehension syntax
allow-dict-calls-with-keyword-arguments = false

[tool.ruff.lint.flake8-unused-arguments]
# Strict unused argument detection
ignore-variadic-names = false

[tool.ruff.lint.pyupgrade]
# Modern Python syntax upgrades
keep-runtime-typing = false  # Use TYPE_CHECKING imports

[tool.ruff.lint.flake8-self]
# Prevent unnecessary self/cls usage
extend-ignore-names = ["_"]

[tool.ruff.format]
# Formatter configuration
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
# Black formatter configuration
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
)/
'''

[tool.isort]
# isort configuration
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
src_paths = ["src", "tests", "examples"]
known_first_party = ["widgetsystem"]
known_third_party = ["PySide6", "PySide6QtAds"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
no_lines_before = "LOCALFOLDER"
lines_after_imports = 2
force_single_line = false
force_sort_within_sections = true

[tool.pytest.ini_options]
# Pytest configuration
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",                    # Show summary of all test outcomes
    "--strict-markers",       # Strict marker validation
    "--strict-config",        # Strict config validation
    "--showlocals",           # Show local variables in tracebacks
    "-vv",                    # Very verbose
    "--tb=short",            # Short traceback format
    "--cov=src/widgetsystem", # Coverage for our package
    "--cov-report=term-missing", # Show missing lines
    "--cov-report=html",      # HTML coverage report
    "--cov-fail-under=80",    # Require 80% coverage
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "ui: marks tests that require UI/QApplication",
]
filterwarnings = [
    "error",                  # Turn warnings into errors
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.pylint.main]
# Pylint configuration
py-version = "3.10"
jobs = 0  # Use all CPUs
suggestion-mode = true
fail-under = 9.0  # Minimum score of 9.0

[tool.pylint.messages_control]
# Enable all messages except those we explicitly disable
enable = ["all"]
disable = [
    "C0114",  # missing-module-docstring (we handle with ruff)
    "C0115",  # missing-class-docstring (we handle with ruff)
    "C0116",  # missing-function-docstring (we handle with ruff)
    "R0903",  # too-few-public-methods (data classes are fine)
    "R0913",  # too-many-arguments (Qt needs many args)
    "W0212",  # protected-access (needed for Qt internals)
    "C0103",  # invalid-name (Qt uses camelCase)
]

[tool.pylint.format]
max-line-length = 100
indent-string = "    "
expected-line-ending-format = "LF"

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "id", "x", "y", "z", "w", "h", "f", "t"]
argument-naming-style = "snake_case"
attr-naming-style = "snake_case"
class-attribute-naming-style = "any"
class-naming-style = "PascalCase"
const-naming-style = "UPPER_CASE"
function-naming-style = "snake_case"
method-naming-style = "snake_case"
module-naming-style = "snake_case"
variable-naming-style = "snake_case"

[tool.pylint.design]
max-args = 8
max-attributes = 15
max-bool-expr = 5
max-branches = 15
max-locals = 20
max-parents = 7
max-public-methods = 30
max-returns = 8
max-statements = 60
min-public-methods = 1

[tool.pylint.imports]
allow-wildcard-with-all = false

[tool.pylint.similarities]
ignore-imports = true
min-similarity-lines = 6

[tool.coverage.run]
# Coverage.py configuration
source = ["src"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
# Coverage reporting
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if sys.version_info",
    "\\.\\.\\.",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
# Bandit security linter configuration
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
    "build",
    "dist",
]
skips = [
    "B101",  # assert_used (we use asserts in tests)
    "B601",  # paramiko_calls (not applicable)
]
tests = ["B201", "B301", "B302", "B303", "B304", "B305", "B306", "B307", "B308", "B309", "B310", "B311", "B312", "B313", "B314", "B315", "B316", "B317", "B318", "B319", "B320", "B321", "B323", "B324", "B325", "B401", "B402", "B403", "B404", "B405", "B406", "B407", "B408", "B409", "B410", "B411", "B412", "B413", "B501", "B502", "B503", "B504", "B505", "B506", "B507", "B508", "B509", "B602", "B603", "B604", "B605", "B606", "B607", "B608", "B609", "B610", "B611", "B701", "B702", "B703"]

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/tests/*"]
